--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "laravel/horizon": "^5.7",
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
         "nexmo/laravel": "^2.4"
@@ -23,7 +24,6 @@
         "itsgoingd/clockwork": "^5.0",
         "laravel/breeze": "^1.0",
         "mockery/mockery": "^1.4.2",
-        "nascent-africa/jetstrap": "^2.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
     },
