--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,14 @@ jobs:
 
     - name: Run Laravel Mix
       run: npm run production
+      
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: |
+          /
+      
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
