--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/horizon": "^5.7",
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
-        "nexmo/laravel": "^2.4"
+        "nexmo/laravel": "^2.4",
+        "webup/laravel-sendinblue": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
