--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
 
@@ -27,7 +25,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install Composer dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest --no-dev --optimize-autoloader
       
     - name: Install NPM dependencies
       run: npm install
@@ -35,12 +33,15 @@ jobs:
     - name: Run Laravel Mix
       run: npm run production
       
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
+    - name: rsync deployment
+      uses: burnett01/rsync-deployments@4.1
       with:
-        name: dist
-        path: |
-          ./
+        switches: -avzr --delete
+        path: /
+        remote_path: /var/www/ping/
+        remote_host: nicolus.fr
+        remote_user: ubuntu
+        remote_key: ${{ secrets.DEPLOY_KEY }}
       
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
