--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,7 +44,7 @@ jobs:
     - name: rsync deployment
       uses: burnett01/rsync-deployments@4.1
       with:
-        switches: -avzr --delete --exclude node_modules
+        switches: -avzr --delete --exclude '.env' 'node_modules/' 'storage/' 'bootstrap/cache/'
         path: /
         remote_path: /var/www/ping/
         remote_host: nicolus.fr
