--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hedii/laravel-gelf-logger": "^6.0",
+        "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/horizon": "^5.7",
         "laravel/nexmo-notification-channel": "^2.5",
@@ -23,10 +25,10 @@
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "itsgoingd/clockwork": "^5.0",
-        "laravel/breeze": "^1.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "wulfheart/pretty_routes": "^0.3.0"
     },
     "config": {
         "optimize-autoloader": true,
