--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -54,6 +54,18 @@ jobs:
         remote_host: nicolus.fr
         remote_user: ubuntu
         remote_key: ${{ secrets.DEPLOY_KEY }}
+
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: nicolus.fr
+        username: ubuntu
+        key: ${{ secrets.DEPLOY_KEY }}
+        port: 22
+        script: |
+          cd /var/www/ping
+          php artisan optimize:clear
+          php artisan horizon:terminate
       
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
