--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -58,7 +58,7 @@ jobs:
         remote_user: ubuntu
         remote_key: ${{ secrets.DEPLOY_KEY }}
 
-    - name: executing remote ssh commands using password
+    - name: executing remote ssh commands
       uses: appleboy/ssh-action@master
       with:
         host: nicolus.fr
