--- a/package.json
+++ b/package.json
@@ -13,15 +13,11 @@
         "@popperjs/core": "^2.9.2",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21",
-        "bootstrap": "^5.0.0-beta3",
-        "laravel-mix": "^6.0.18",
+        "bootstrap": "^5.0.1",
+        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.21",
-        "postcss": "^8.2.13",
         "resolve-url-loader": "^3.1.3",
-        "sass": "^1.32.12",
+        "sass": "^1.34.0",
         "sass-loader": "^8.0.2"
-    },
-    "dependencies": {
-        "bootstrap-icons": "^1.4.1"
     }
 }
