--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "bootstrap": "^5.0.1",
+        "bootstrap-icons": "^1.5.0",
         "laravel-mix": "^6.0.19",
+        "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "resolve-url-loader": "^3.1.3",
         "sass": "^1.34.0",
