Trying something to fix travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ os: linux
 before_script:
   - composer install
   - cp .env.example .env
+  - chmod -R 777 storage bootstrap/cache
   - php artisan key:generate
 
 script:
