--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Pinger
 APP_ENV=local
 APP_KEY=base64:rAPWf/pyNgaeYrQKXTdRbzCJkByGVzCYTp7oRERP4p8=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
