--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^8.12",
         "laravel/horizon": "^5.7",
         "laravel/nexmo-notification-channel": "^2.5",
+        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "nexmo/laravel": "^2.4",
         "webup/laravel-sendinblue": "^3.1"
