--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.9.2",
-        "autoprefixer": "^10.2.5",
+        "autoprefixer": "^10.2.6",
         "axios": "^0.21",
-        "bootstrap": "^5.0.1",
+        "bootstrap": "^5.0.2",
         "bootstrap-icons": "^1.5.0",
-        "laravel-mix": "^6.0.19",
+        "laravel-mix": "^6.0.25",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
-        "resolve-url-loader": "^3.1.3",
-        "sass": "^1.34.0",
+        "postcss": "^8.3.5",
+        "resolve-url-loader": "^3.1.4",
+        "sass": "^1.35.1",
         "sass-loader": "^8.0.2"
     }
 }
