--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
         "php": "^8.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "kreait/laravel-firebase": "^3.1",
         "laravel-notification-channels/fcm": "~2.0",
         "laravel/fortify": "^1.7",
         "laravel/framework": "^9.0",
         "laravel/horizon": "^5.7",
-        "laravel/vonage-notification-channel": "^3.0",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravel/vonage-notification-channel": "^3.0",
+        "symfony/http-client": "^6.0",
+        "symfony/sendinblue-mailer": "^6.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
