--- a/composer.json
+++ b/composer.json
@@ -8,30 +8,29 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "hedii/laravel-gelf-logger": "^6.0",
-        "kreait/laravel-firebase": "^3.1",
-        "laravel-notification-channels/fcm": "~2.0",
-        "laravel/fortify": "^1.7",
-        "laravel/framework": "^8.12",
-        "laravel/horizon": "^5.7",
-        "laravel/nexmo-notification-channel": "^2.5",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-        "nexmo/laravel": "^2.4",
+        "hedii/laravel-gelf-logger": "^7.1.0",
+        "kreait/laravel-firebase": "^5.0.0",
+        "laravel-notification-channels/fcm": "^3.0.0",
+        "laravel/fortify": "^1.16.0",
+        "laravel/framework": "^9.51.0",
+        "laravel/horizon": "^5.14.1",
+        "laravel/vonage-notification-channel": "3.2.0",
+        "laravel/sanctum": "^3.2.1",
+        "laravel/tinker": "^2.8",
+        "vonage/vonage-laravel": "^1.0.1",
         "webup/laravel-sendinblue": "^3.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.6.4",
         "fakerphp/faker": "^1.9.1",
         "itsgoingd/clockwork": "^5.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3",
-        "wulfheart/pretty_routes": "^0.3.0"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
