--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@erbelion/vite-plugin-laravel-purgecss": "^0.1.4",
         "@popperjs/core": "^2.9.2",
         "autoprefixer": "^10.2.6",
         "axios": "^0.21",
         "bootstrap": "^5.0.2",
         "bootstrap-icons": "^1.5.0",
+        "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.3.5",
         "resolve-url-loader": "^3.1.4",
         "sass": "^1.35.1",
         "sass-loader": "^8.0.2",
-        "vite": "^3.0.2",
-        "laravel-vite-plugin": "^0.6.0"
+        "vite": "^3.0.2"
     }
 }
