Add Broadcast notifications and overhaul notifications logic.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "laravel/vonage-notification-channel": "^3.2.0",
         "propaganistas/laravel-phone": "^5.0",
+        "pusher/pusher-php-server": "^7.2",
         "symfony/http-client": "^6.0",
         "symfony/sendinblue-mailer": "^6.0"
     },
