--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "axios": "^0.21",
         "bootstrap": "^5.0.2",
         "bootstrap-icons": "^1.5.0",
+        "laravel-echo": "^1.15.0",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.21",
         "postcss": "^8.3.5",
+        "pusher-js": "^8.0.2",
         "resolve-url-loader": "^3.1.4",
         "sass": "^1.35.1",
         "sass-loader": "^8.0.2",
