--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,20 @@
         "fakerphp/faker": "^1.9.1",
         "itsgoingd/clockwork": "^5.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^6.1",
+        "nunomaduro/collision": "^v7.8.11",
         "nunomaduro/larastan": "^2.0",
-        "phpunit/phpunit": "^9.3.3",
+        "pestphp/pest": "^v2.16.0",
+        "pestphp/pest-plugin-drift": "^2.3",
+        "phpunit/phpunit": "^10.3.0",
         "spatie/laravel-ignition": "^2.0.0"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
