--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@erbelion/vite-plugin-laravel-purgecss": "^0.1.4",
-        "@popperjs/core": "^2.9.2",
-        "autoprefixer": "^10.2.6",
-        "axios": "^0.21",
-        "bootstrap": "^5.0.2",
-        "bootstrap-icons": "^1.5.0",
-        "laravel-echo": "^1.15.0",
-        "laravel-vite-plugin": "^0.6.0",
+        "@erbelion/vite-plugin-laravel-purgecss": "^0.2.2",
+        "@popperjs/core": "^2.11.8",
+        "autoprefixer": "^10.4.15",
+        "axios": "^1.5.0",
+        "bootstrap": "^5.3.2",
+        "bootstrap-icons": "^1.11.0",
+        "laravel-echo": "^1.15.3",
+        "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.21",
-        "postcss": "^8.3.5",
-        "pusher-js": "^8.0.2",
-        "resolve-url-loader": "^3.1.4",
-        "sass": "^1.35.1",
-        "sass-loader": "^8.0.2",
-        "vite": "^3.0.2"
+        "postcss": "^8.4.29",
+        "pusher-js": "^8.3.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.67.0",
+        "sass-loader": "^13.3.2",
+        "sweetalert2": "^11.7.28",
+        "vite": "^4.4.9"
     }
 }
