--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,9 @@
         "itsgoingd/clockwork": "^5.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^v7.8.11",
-        "nunomaduro/larastan": "^2.0",
+        "phpstan/phpstan": "^1.10.57",
+        "larastan/larastan": "^2.0",
         "pestphp/pest": "^v2.16.0",
-        "pestphp/pest-plugin-drift": "^2.3",
         "phpunit/phpunit": "^10.3.0",
         "spatie/laravel-ignition": "^2.0.0"
     },
