--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@erbelion/vite-plugin-laravel-purgecss": "^0.2.2",
+        "@erbelion/vite-plugin-laravel-purgecss": "^0.2.3",
         "@popperjs/core": "^2.11.8",
         "autoprefixer": "^10.4.15",
         "axios": "^1.5.0",
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.0",
         "laravel-echo": "^1.15.3",
-        "laravel-vite-plugin": "^0.8.0",
+        "laravel-vite-plugin": "^1.0.1",
         "lodash": "^4.17.21",
         "postcss": "^8.4.29",
         "pusher-js": "^8.3.0",
@@ -20,6 +20,7 @@
         "sass": "^1.67.0",
         "sass-loader": "^13.3.2",
         "sweetalert2": "^11.7.28",
-        "vite": "^4.4.9"
-    }
+        "vite": "^5.1.1"
+    },
+    "type": "module"
 }
