--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Set platform as php 8.3 for dependencies
       run: composer config platform.php 8.3
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+#    - name: Validate composer.json and composer.lock
+#      run: composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
