--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -58,20 +58,20 @@ jobs:
       with:
         switches: -avzr --delete --exclude=".env" --exclude="node_modules/" --exclude="storage/" --exclude="bootstrap/cache/" --exclude=".git"
         path: /
-        remote_path: /var/www/ping/
-        remote_host: nicolus.fr
-        remote_user: ubuntu
+        remote_path: ${{ vars.REMOTE_PATH }}
+        remote_host: ${{ vars.REMOTE_HOST }}
+        remote_user: ${{ vars.REMOTE_USER }}
         remote_key: ${{ secrets.DEPLOY_KEY }}
 
     - name: executing remote ssh commands
       uses: appleboy/ssh-action@master
       with:
         host: nicolus.fr
-        username: ubuntu
+        username: ${{ vars.REMOTE_USER }}
         key: ${{ secrets.DEPLOY_KEY }}
         port: 22
         script: |
-          cd /var/www/ping
+          cd ${{ vars.REMOTE_PATH }}
           php artisan optimize
           php artisan storage:link
           php artisan horizon:terminate
