Upgrade to Laravel 11 + Reverb

--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.0.1",
         "kreait/laravel-firebase": "^5.0.0",
-        "laravel-notification-channels/fcm": "^3.0.0",
+        "laravel-notification-channels/fcm": "^4.0.0",
         "laravel/fortify": "^1.16.0",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^11.0",
         "laravel/horizon": "^5.14.1",
-        "laravel/sanctum": "^3.2.1",
+        "laravel/reverb": "@beta",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
         "laravel/vonage-notification-channel": "^3.2.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "propaganistas/laravel-phone": "^5.0",
         "pusher/pusher-php-server": "^7.2",
         "symfony/http-client": "^6.0",
@@ -27,7 +29,7 @@
         "fakerphp/faker": "^1.9.1",
         "itsgoingd/clockwork": "^5.0",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^v7.8.11",
+        "nunomaduro/collision": "^v8.1",
         "phpstan/phpstan": "^1.10.57",
         "larastan/larastan": "^2.0",
         "pestphp/pest": "^v2.16.0",
